Adjust Help section pages and CSS. (#297)

--- a/gobotany/site/templates/gobotany/_primary_navigation_top.html
+++ b/gobotany/site/templates/gobotany/_primary_navigation_top.html
@@ -14,5 +14,5 @@
                     <li class="dkey">{% nav_item 'Dichotomous Key' dich-key-placeholder %}</li>
                 {% endif %}
                 <li class="teaching">{% nav_item 'Teaching' site-teaching %}</li>
-                <li class="about">{% nav_item 'Help' site-help %}</li>
+                <li class="help">{% nav_item 'Help' site-help %}</li>
             </ul>
