--- a/gobotany/site/templates/gobotany/advanced_map.html
+++ b/gobotany/site/templates/gobotany/advanced_map.html
@@ -6,7 +6,7 @@
     require(['site/advanced_map']);
 {% endblock %}
 
-{% block body_attributes %}id="advanced-map" class="about"{% endblock %}
+{% block body_attributes %}id="advanced-map" class="help"{% endblock %}
 
 {% block main_content %}     
 <div>
