--- a/gobotany/site/templates/gobotany/getting_started.html
+++ b/gobotany/site/templates/gobotany/getting_started.html
@@ -6,7 +6,7 @@
     require(['site/about']);
 {% endblock %}
 
-{% block body_attributes %}id="getting-started" class="about"{% endblock %}
+{% block body_attributes %}id="getting-started" class="help"{% endblock %}
 
 {% block main_content %}
     <h1>Getting Started with the Simple Key</h1>
