--- a/gobotany/site/templates/gobotany/help.html
+++ b/gobotany/site/templates/gobotany/help.html
@@ -6,13 +6,12 @@
     require(['site/about']);
 {% endblock %}
 
-{% block body_attributes %}id="help" class="about"{% endblock %}
+{% block body_attributes %}id="help" class="help"{% endblock %}
 
 {% block main_content %}
     <h1>Help</h1>
 
-    <p>Here is an overview of help resources for the plant
-    identification keys and other sections of the Go Botany site.</p>
+    <p>Here is an overview of help resources available for the site.</p>
 
     <h2>For the Simple Key</h2>
 
@@ -26,7 +25,7 @@
     <h2>For the Full Key</h2>
     
     <p>Because the Full Key works like the Simple Key only with
-    more plants, please see the Simple Key help above.</p>
+    more plants, see the Simple Key help above.</p>
 		
     <h2>For the Dichotomous Key</h2>
 	
