--- a/gobotany/site/templates/gobotany/video.html
+++ b/gobotany/site/templates/gobotany/video.html
@@ -6,7 +6,7 @@
     require(['site/about']);
 {% endblock %}
 
-{% block body_attributes %}id="video" class="about"{% endblock %}
+{% block body_attributes %}id="video" class="help"{% endblock %}
 
 {% block main_content %}
     <h1>Video Help Topics</h1>
