--- a/gobotany/static/sass/_help.scss
+++ b/gobotany/static/sass/_help.scss
@@ -1,4 +1,4 @@
-/* About */
+/* Help */
 
 $advanced-map-frame-border: 5px solid rgba(255, 255, 255, 0.8);
 $advanced-map-active-color: #1a2e12;
@@ -12,6 +12,8 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
         }
     }
 }
+
+/* About */
 
 #about #main {
     img {
