--- a/gobotany/site/templates/gobotany/contributors.html
+++ b/gobotany/site/templates/gobotany/contributors.html
@@ -8,7 +8,7 @@
     require(['site/about']);
 {% endblock %}
 
-{% block body_attributes %}id="contributors" class="about"{% endblock %}
+{% block body_attributes %}id="contributors" class="help"{% endblock %}
 
 {% block main_content %}
     <h1>Contributors</h1>
