--- a/gobotany/site/templates/gobotany/glossary.html
+++ b/gobotany/site/templates/gobotany/glossary.html
@@ -12,7 +12,7 @@
     require(['site/glossary']);
 {% endblock %}
 
-{% block body_attributes %}id="glossary" class="about"{% endblock %}
+{% block body_attributes %}id="glossary" class="help"{% endblock %}
 
 {% block main_content %}
     <h1>Glossary: {{ this_letter|upper }}</h1>
