Rename JS module for the Help section. (#297)

--- a/gobotany/site/templates/gobotany/about.html
+++ b/gobotany/site/templates/gobotany/about.html
@@ -3,7 +3,7 @@
 {% block title %}About Go Botany{% endblock %}
 
 {% block js_require %}
-    require(['site/about']);
+    require(['site/help']);
 {% endblock %}
 
 {% block body_attributes %}id="about" class="help"{% endblock %}
