--- a/gobotany/site/templates/gobotany/contributors.html
+++ b/gobotany/site/templates/gobotany/contributors.html
@@ -5,7 +5,7 @@
 {% block more_meta_link %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block js_require %}
-    require(['site/about']);
+    require(['site/help']);
 {% endblock %}
 
 {% block body_attributes %}id="contributors" class="help"{% endblock %}
