--- a/gobotany/site/templates/gobotany/getting_started.html
+++ b/gobotany/site/templates/gobotany/getting_started.html
@@ -3,7 +3,7 @@
 {% block title %}Getting Started with the Simple Key{% endblock %}
 
 {% block js_require %}
-    require(['site/about']);
+    require(['site/help']);
 {% endblock %}
 
 {% block body_attributes %}id="getting-started" class="help"{% endblock %}
