--- a/gobotany/site/templates/gobotany/help.html
+++ b/gobotany/site/templates/gobotany/help.html
@@ -3,7 +3,7 @@
 {% block title %}Help{% endblock %}
 
 {% block js_require %}
-    require(['site/about']);
+    require(['site/help']);
 {% endblock %}
 
 {% block body_attributes %}id="help" class="help"{% endblock %}
