--- a/gobotany/site/templates/gobotany/video.html
+++ b/gobotany/site/templates/gobotany/video.html
@@ -3,7 +3,7 @@
 {% block title %}Video Help Topics{% endblock %}
 
 {% block js_require %}
-    require(['site/about']);
+    require(['site/help']);
 {% endblock %}
 
 {% block body_attributes %}id="video" class="help"{% endblock %}
