Write tests for Help pages and update page titles. (#297)

--- a/gobotany/site/templates/gobotany/advanced_map.html
+++ b/gobotany/site/templates/gobotany/advanced_map.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_full_sidebar.html" %}
 
-{% block title %}Advanced Map to Groups{% endblock %}
+{% block title %}Advanced Map to Groups: Help{% endblock %}
 
 {% block js_require %}
     require(['site/advanced_map']);
