--- a/gobotany/site/templates/gobotany/contributors.html
+++ b/gobotany/site/templates/gobotany/contributors.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_full_sidebar.html" %}
 
-{% block title %}Contributors{% endblock %}
+{% block title %}Contributors: Help{% endblock %}
 
 {% block more_meta_link %}<meta name="robots" content="noindex">{% endblock %}
 
