--- a/gobotany/site/templates/gobotany/getting_started.html
+++ b/gobotany/site/templates/gobotany/getting_started.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_full_sidebar.html" %}
 
-{% block title %}Getting Started with the Simple Key{% endblock %}
+{% block title %}Getting Started with the Simple Key: Help{% endblock %}
 
 {% block js_require %}
     require(['site/help']);
