--- a/gobotany/site/templates/gobotany/glossary.html
+++ b/gobotany/site/templates/gobotany/glossary.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_full_sidebar.html" %}
 
-{% block title %}Glossary: {{ this_letter|upper }}{% endblock %}
+{% block title %}Glossary: {{ this_letter|upper }}: Help{% endblock %}
 
 {% block js_top %}
     <script>
