--- a/gobotany/site/templates/gobotany/video.html
+++ b/gobotany/site/templates/gobotany/video.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_full_sidebar.html" %}
 
-{% block title %}Video Help Topics{% endblock %}
+{% block title %}Video Help Topics: Help{% endblock %}
 
 {% block js_require %}
     require(['site/help']);
