--- a/gobotany/site/templates/gobotany/about.html
+++ b/gobotany/site/templates/gobotany/about.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_full_sidebar.html" %}
 
-{% block title %}About Go Botany{% endblock %}
+{% block title %}About Go Botany: Help{% endblock %}
 
 {% block js_require %}
     require(['site/help']);
