Fix #301 by having dkey links jump to #dkey
Before, links to a species page from the dkey left the user up at the
top of the page.  Now, they use a #dkey anchor to warp the user down to
the dkey-specific information at the bottom of the page.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -115,7 +115,7 @@
           {% elif lead.goto_num %}
             href="#c{{ lead.goto_num }}">JUMP TO {{ lead.goto_num }}
           {% elif p.rank == 'species' %}
-            href="{% url taxa-species p.title|genus_slug p.title|species_slug %}?key=dichotomous"
+            href="{% url taxa-species p.title|genus_slug p.title|species_slug %}?key=dichotomous#dkey"
               ><i>{{ p.title|abbreviate_title }}</i>
           {% elif not p %}
             >—
