Begin adding the D. Key pages to our search engine.
Basic pages with titles and headings are in place so far. Breadcrumbs and
page text are yet to be added. (#195)

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -1,7 +1,7 @@
 {% extends "gobotany/_page_no_sidebar.html" %}
 {% load dkey_filters %}
 
-{% block title %}{{ page.title }}{% endblock %}
+{% block title %}{% if title == 'Key to the Families' %}Dichotomous {% endif %}{{ page.title }}{% endblock %}
 {% block script_name %}dkey{% endblock %}
 {% block js_require %}
   require(['dkey/dkey']);
