Refuse to show a species on a dkey genus page #300
Before, we followed the format of Arthur's book by not showing any leads
where there was no longer any choice beneath a genus: when a genus had
only one species. But since species now live off on another page under a
unified "/species/" URL space, we need to generate a fake lead beneath a
single-species genus, that does not actually exist in the book, that
when clicked launches the user over into the "/species/" space.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -60,12 +60,7 @@
   {% endif %}
 </p>
 
-{% if leads|length == 1 %}
-  <p data-rank="{{ page.rank }}" data-title="{{ page.title }}">This
-    {{ page.rank }} contains exactly one {{ next_page.rank }},
-    {{ page|display_title }}.</p>
-{% endif %}
-{% if leads|length == 1 %}
+{% if page.rank != 'genus' and leads|length == 1 %}
   <p data-rank="{{ page.rank }}" data-title="{{ page.title }}">This
     {{ page.rank }} contains exactly one {{ next_page.rank }},
     {{ page|display_title }}.</p>
@@ -147,6 +142,8 @@
           {{ lead.text|render_figure_links|safe }}
         {% elif lead.goto_page.rank == 'subkey' %}
           {{ lead.goto_page.title }}
+        {% elif leads|length == 1 %}
+          This {{ page.rank }} contains exactly one {{ next_page.rank }}.
         {% endif %}
       </div>
       {% endwith %}
