Fix #300 by restoring dkey image of single species
Before, a family or genus page with only one species displayed no
images; now, a 1-species family or genus in the dkey correctly displays
a single species image down at the bottom of the page in its image grid.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -71,6 +71,9 @@
     See list of {{ taxa_beneath|length }} {{ rank_beneath|taxon_plural }}
     in this {% if page.rank == 'top' %}key{% else %}{{ page.rank }}{% endif %}
   </a>
+{% elif taxa_beneath|length == 1 %}
+  <div class="what-lies-beneath" data-taxa="{{ taxa_beneath|json }}">
+  </div>
 {% endif %}
 
 {{ page.text|render_floating_figures|render_figure_links|safe }}
