Add markup and scripts for sighting image upload modal.

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -32,5 +32,9 @@
 
         </fieldset>
 
+        <p>Add image(s) to sighting</p> 
+        <p><a id="upload-link" href="#">Upload Image(s)+</a></p>
+        <div class="thumb-gallery"><p>&nbsp;</p></div>
+
         <input type="submit" class="post-sighting-btn"
             alt="Post a Sighting">{# add class 'inactive' for disabled look #}
