Correct and enhance D. Key page titles.
Fix a mistake I had introduced earlier which included the word 'the'
in the main page title. Add ': Dichotomous Key' at the end of all
pages except the main page in order to match our style site-wide,
which is used in our search engine and will be crawled and
displayed by external search engines. (#195)

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -1,7 +1,7 @@
 {% extends "gobotany/_page_no_sidebar.html" %}
 {% load dkey_filters %}
 
-{% block title %}{% if title == 'Key to the Families' %}Dichotomous {% endif %}{{ page.title }}{% endblock %}
+{% block title %}{% if page.title == 'Key to the Families' %}Dichotomous Key to Families{% else %}{{ page.title|expand_group_title }}: Dichotomous Key{% endif %}{% endblock %}
 {% block script_name %}dkey{% endblock %}
 {% block js_require %}
   require(['dkey/dkey']);
