Add uploaded photo ids to the Sightings form.
As each sighting photo is uploaded, it's id is stuff into a hidden input
box we can use later to associate these photos with the Sighting.

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -34,6 +34,9 @@
 
         <p>Add image(s) to sighting</p> 
         <p><a id="upload-link" href="#">Upload Image(s)+</a></p>
+        <div id="sighting-photos">
+            <input type="hidden" name="__template__sightings_photos" class="template-photo"></input>
+        </div>
         <div class="thumb-gallery"><p>&nbsp;</p></div>
 
         <input type="submit" class="post-sighting-btn"
