--- a/gobotany/static/sass/_search.scss
+++ b/gobotany/static/sass/_search.scss
@@ -16,7 +16,7 @@ body.search-results {
             padding: 2px 0;
             img {
                 float: left;
-                margin: -1px 10px 0;
+                margin: -1px 10px 0 0;
                 vertical-align: middle;
             }
             a {
@@ -26,7 +26,7 @@ body.search-results {
             }
             p {
                 line-height: 140%;
-                margin-left: 44px;
+                margin-left: 34px;
                 margin-top: 2px;
             }
         }
