--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -1023,6 +1023,7 @@ body.teaching #main li {
 @import "search";
 @import "help";
 @import "legal";
+@import "popups";
 
 /* Finally, include global media queries for smartphones and tablets. These
  * should be last. */
