--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -704,7 +704,7 @@ body.skey.groups-subgroups .list-item a.plant-in-subgroup:active { background-po
 body.skey.groups-subgroups .not-my-plant { clear: left; float: right; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; padding: 20px 0 0; text-align: center; }
 body.skey.groups-subgroups .not-my-plant p { margin: 0; padding: 0; }
 body.skey.groups-subgroups .not-my-plant p + p { font-family: Verdana, Geneva, sans-serif; }
-body.skey.results { /* end .already-know */ /* end .modal-wrap */ /* end .plant-list */ /* end #sidebar */ /* end #intro-overlay */ /* end #results-tabs */ /* Ordinarily this message will have its centering done by JavaScript. See gobotany.sk.results.notify() */ /* Working Area styles */ /* end .working-area */ }
+body.skey.results { /* end .already-know */ /* end .plant-list */ /* end #sidebar */ /* end #intro-overlay */ /* end #results-tabs */ /* Ordinarily this message will have its centering done by JavaScript. See gobotany.sk.results.notify() */ /* Working Area styles */ /* end .working-area */ }
 body.skey.results .already-know { float: left; margin: 0 0 40px 0; }
 body.skey.results .already-know h6 { color: #807121; font-weight: bold; margin: 0 0 5px 0; }
 body.skey.results .already-know label { color: #807121; display: block; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 12px; font-weight: normal; margin: 5px 0 3px; vertical-align: middle; }
@@ -715,27 +715,6 @@ body.skey.results #results-display label { color: #000; font-family: "Trebuchet 
 body.skey.results #results-display select { font-size: 15px; background: #ebf6df; border: 1px solid #9cc86b; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; padding: 0; -webkit-appearance: menulist; }
 body.skey.results #results-display img.icon { margin: 0 3px 0 0; vertical-align: -1px; }
 body.skey.results #modal, body.skey.results #plant-detail-modal { display: none; }
-body.skey.results .modal-wrap { border: 5px solid rgba(255, 255, 255, 0.5); -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; /* end a */ }
-body.skey.results .modal-wrap .inner { background: #fff; padding: 0 0 20px 0; }
-body.skey.results .modal-wrap .inner h4.heading, body.skey.results .modal-wrap .inner h3.heading { margin: 0; padding: 13px 0 0 20px; }
-body.skey.results .modal-wrap .inner h4.heading { font-size: 18px; }
-body.skey.results .modal-wrap .inner h3.heading { font-size: 24px; font-style: italic; margin-bottom: 0; margin-left: 245px; }
-body.skey.results .modal-wrap .inner h3.heading span { color: #807121; font-size: 16px; font-style: normal; }
-body.skey.results .modal-wrap .inner p { font-size: 12px; margin: 0; padding: 4px 20px 0; }
-body.skey.results .modal-wrap #choices { padding: 10px 20px 0 20px; }
-body.skey.results .modal-wrap #choices ul { list-style-type: none; }
-body.skey.results .modal-wrap #choices li { margin: 0 0 14px; }
-body.skey.results .modal-wrap #plant-details { padding: 10px 10px 0; }
-body.skey.results .modal-wrap .list-item { border-top: none; margin: 0 0 0 0; padding: 0 0 0 0; }
-body.skey.results .modal-wrap .list-item h4 { color: #807121; }
-body.skey.results .modal-wrap .list-item p { padding: 0 0 7px 0; }
-body.skey.results .modal-wrap .list-item .details { float: left; margin: 0 0 0 10px; width: 610px; }
-body.skey.results .modal-wrap a.get-more-info { background: url(/static/images/layout/get-more-info.png) 0 0 no-repeat transparent; height: 32px; margin: 20px 0 0 0; width: 163px; display: block; text-indent: -9000px; }
-body.skey.results .modal-wrap a.get-more-info:hover { background-position: 0 -32px; }
-body.skey.results .modal-wrap a.get-more-info:active { background-position: 0 -64px; }
-body.skey.results .modal-wrap a.go-to-species-page { background: url(/static/images/layout/go-to-species-page.png) 0 0 no-repeat transparent; height: 31px; margin: 20px 0 0 0; width: 212px; display: block; text-indent: -9000px; }
-body.skey.results .modal-wrap a.go-to-species-page:hover { background-position: 0 -31px; }
-body.skey.results .modal-wrap a.go-to-species-page:active { background-position: 0 -62px; }
 body.skey.results .plant-list { margin-top: 8px; position: relative; /* end .plant */ /* List view styles */ /* end table */ }
 body.skey.results .plant-list .plant { background: #fff; border: 1px solid #c3d941; display: none; height: 210px; left: 0px; padding: 8px 6px; position: absolute; text-align: center; top: 0px; width: 160px; /* prevent long names from blowing out layout; allow wrap */ }
 body.skey.results .plant-list .plant.in-results { display: block; }
@@ -1250,6 +1229,29 @@ body.search-results .search-navigation a { text-decoration: underline; }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) { .legal #main ol.terms { font-size: 18px; padding-left: 32px; } }
 /* End media queries styles for the legal notification pages */
+.modal-wrap { border: 5px solid rgba(255, 255, 255, 0.5); -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; /* end a */ }
+.modal-wrap .inner { background: #fff; padding: 0 0 20px 0; }
+.modal-wrap .inner h4.heading, .modal-wrap .inner h3.heading { margin: 0; padding: 13px 0 0 20px; }
+.modal-wrap .inner h4.heading { font-size: 18px; }
+.modal-wrap .inner h3.heading { font-size: 24px; font-style: italic; margin-bottom: 0; margin-left: 245px; }
+.modal-wrap .inner h3.heading span { color: #807121; font-size: 16px; font-style: normal; }
+.modal-wrap .inner p { font-size: 12px; margin: 0; padding: 4px 20px 0; }
+.modal-wrap #choices { padding: 10px 20px 0 20px; }
+.modal-wrap #choices ul { list-style-type: none; }
+.modal-wrap #choices li { margin: 0 0 14px; }
+.modal-wrap #plant-details { padding: 10px 10px 0; }
+.modal-wrap .list-item { border-top: none; margin: 0 0 0 0; padding: 0 0 0 0; }
+.modal-wrap .list-item h4 { color: #807121; }
+.modal-wrap .list-item p { padding: 0 0 7px 0; }
+.modal-wrap .list-item .details { float: left; margin: 0 0 0 10px; width: 610px; }
+.modal-wrap a.get-more-info { background: url(/static/images/layout/get-more-info.png) 0 0 no-repeat transparent; height: 32px; margin: 20px 0 0 0; width: 163px; display: block; text-indent: -9000px; }
+.modal-wrap a.get-more-info:hover { background-position: 0 -32px; }
+.modal-wrap a.get-more-info:active { background-position: 0 -64px; }
+.modal-wrap a.go-to-species-page { background: url(/static/images/layout/go-to-species-page.png) 0 0 no-repeat transparent; height: 31px; margin: 20px 0 0 0; width: 212px; display: block; text-indent: -9000px; }
+.modal-wrap a.go-to-species-page:hover { background-position: 0 -31px; }
+.modal-wrap a.go-to-species-page:active { background-position: 0 -62px; }
+
+/* end .modal-wrap */
 /* Finally, include global media queries for smartphones and tablets. These should be last. */
 /* Begin global media queries styles.  So far there are three sections for smartphones (two fixed-width layouts to cover portrait and landscape orientations, with a section common to both orientations) and some additional styles for tablets. Using fixed-width layouts allows some pages to have a wider central content area for now. Various SASS "partials" (_home.scss, _help.scss, etc.) have their own media queries arranged like the ones below. Think of those as modular extensions to these. */
 /* Portrait-orientation styles */
