--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -458,7 +458,8 @@ footer .support { margin-right: 0; padding: 18px 0; }
 .characteristics dd ul { list-style-type: disc; margin: 0; padding: 0 0 0 1.3em; text-indent: -0.2em; }
 .characteristics dd ul.compact { margin: 0; padding: 0; text-indent: 0; }
 .characteristics dd ul.compact li { display: inline; }
-.characteristics dd ul.compact li:not([class='last']):after { content: ', '; }
+.characteristics dd ul.compact li:after { content: ', '; }
+.characteristics dd ul.compact li:last-child:after { content: none; }
 .characteristics dd li { margin: 0; padding: 0 0 0.1em; }
 .characteristics.full dt { width: 270px; }
 .characteristics.full dd { margin-left: 280px; }
