Fix #298 by replacing old plant popup with new
Before, the new plant popup was working great over at the dkey.  Now it
is also the plant popup of choice for the Level 3 results page as well.
The old plant popup code has been swept away, and lives on in the
refactored code in popup.js.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -129,6 +129,7 @@
   <a class="clear-filter" {{action "clear"}}>Clear</a>
   {{/if}}
 {% endhandlebars %}
+{% include "plantpreview/_popup.html" %}
 {% endblock %}
 
 {% block sidebar_content %}
