--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -173,7 +173,7 @@ body.skey {
                 vertical-align: -1px;
             }    
         }
-        #modal, #plant-detail-modal {
+        #modal {
             display: none;
         }
 
